--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
     "autoprefixer": "^10.4.20",
+    "feather-icons-react": "^0.7.0",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-feather": "^2.0.10",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
     "tailwindcss": "^3.4.14"
