--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.3.0",
     "autoprefixer": "^10.4.20",
     "feather-icons-react": "^0.7.0",
+    "moment": "^2.30.1",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
