--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-feather": "^2.0.10",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
+    "redux-persist": "^6.0.0",
     "tailwindcss": "^3.4.14"
   },
   "devDependencies": {
